# client-python

./: .gitignore  AGENT.md  CLAUDE.md  README.md  USER_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml  e2e.yml  publish.yml
helixobs/: AGENT.md  __init__.py  _fork.py  _store.py  instrument.py  logging.py  loki.py  setup.py
helixobs/chime/: AGENT.md  __init__.py
tests/: AGENT.md  conftest.py  test_auth.py  test_chime.py  test_fork.py  test_instrument.py  test_logging.py  test_loki.py  test_setup.py  test_store.py
tests/e2e/: docker-compose.yml  test_e2e.py
