[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "helixobs"
version = "0.3.1"
description = "Entity-centric observability client for scientific instrument pipelines"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.8"
authors = [
    { name = "HelixObs", email = "hello@helixobs.io" },
]
keywords = ["observability", "opentelemetry", "science", "astronomy", "otel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "opentelemetry-semantic-conventions>=0.45b0",
]

[project.urls]
Homepage = "https://github.com/HelixObs/client-python"
Repository = "https://github.com/HelixObs/client-python"
Issues = "https://github.com/HelixObs/client-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
]
e2e = [
    "pytest>=8.0",
    "psycopg2-binary>=2.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["helixobs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 10
norecursedirs = ["e2e"]
markers = [
    "e2e: end-to-end tests that require a running stack (deselect with -m 'not e2e')",
]
